--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ad1457;
+  background: #04061a;
   height: 100%;
 }
 
